Adding big summary table

--- a/pyomega/Development/home.html
+++ b/pyomega/Development/home.html
@@ -309,6 +309,8 @@ Fig 2: Time-SNR plot of the same.
 Fig 3: Breakdown of the number of triggers in each category.
 Please click the link to daily cumulative trigger plots to see Fig 1 and 2 for individual days.
     </textarea>
+    <h1>Big metadata table</h1>
+        <p><a href="metadata.html">metadata all</a></p>
 
     <h1>Individual Glitch Class Home Pages</h1>
 
