--- a/pyomega/PostProcessing/individual.html
+++ b/pyomega/PostProcessing/individual.html
@@ -6,215 +6,173 @@
 <link rel="stylesheet" type="text/css" href="https://ldas-jobs.ligo-la.caltech.edu/~scoughlin/O1GravitySpy/css/style.css" />
 <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
 <script src= https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js></script>
+<script src="https://unpkg.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
 <script src=https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js></script> 
 <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://ldas-jobs.ligo-la.caltech.edu/~scoughlin/O1GravitySpy/css/classes.css">
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 <title>{{ glitchType }}</title>
 </head>
 
 <body>
-    <h1>{{ header }}</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="../index.html#">GravitySpy {{header}}</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Individual Class Page <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+          {% for Type in types %}
+            <p><a href="{{ Type }}.html">{{ Type }}</a></p>
+            {% endfor %}
+          </ul>
+        </li>
+        <li class="dropdown">          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Individual Class Manifest <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+          {% for Type in types %}
+            <p><a href="{{ Type }}_metadata.csv">{{ Type }}</a></p>
+            {% endfor %}
+          </ul>
+        </li>
+      </ul>
+     </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+<div class="container">
+  <h2>Interactive D3JS plots</h2>
+  <p>Interactive plots that give an overview of ML classification</p>
+  <div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse1">Freq Versus Time</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse">
+        <div class="panel-body"><p><a href="Freq_Versus_Time_{{ glitchType }}.html">Freq Versus Time</a></p></div>
+      </div>
+    </div>
+  </div>
+  <div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse2">SNR Versus Time</a>
+        </h4>
+      </div>
+      <div id="collapse2" class="panel-collapse collapse">
+        <div class="panel-body"><p><a href="SNR_Versus_Time_{{ glitchType }}.html">SNR Versus Time</a></p></div>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script>
-var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
-
-var xScale = d3.time.scale()
-    .domain([315961183000.0 + {{ gpsStart }} *1000, 315961183000.0 + {{ gpsEnd }} * 1000])
-    .range([0, width]);
-
-var yScale = d3.scale.log()
-    .domain([10, 2048])
-    .range([height, 0]);
-
-var yScale2 = d3.scale.log()
-    .domain([7, 2000])
-    .range([height, 0]);
-
-var color = d3.scale.category20();
-
-var xAxis = d3.svg.axis()
-    .scale(xScale)
-    .orient("bottom")
-    .tickFormat(d3.time.format("%I:%M %a %p"));
-
-formatValue = d3.format(".2s");
-var yAxis = d3.svg.axis()
-    .scale(yScale)
-    .orient("left")
-    .tickFormat(function(d) { return formatValue(d)})
-
-var yAxis2 = d3.svg.axis()
-    .scale(yScale2)
-    .orient("left")
-    .tickFormat(function(d) { return formatValue(d)})
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-var svg2 = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-// add the tooltip area to the webpage
-var tooltip = d3.select("body").append("div")
-    .attr("class", "tooltip")
-    .style("opacity", 0);
-
-var tooltip2 = d3.select("body").append("div")
-    .attr("class", "tooltip")
-    .style("opacity", 0);
-
-d3.json("{{ glitchType }}_metadata.json", function(error, data) {
-  if (error) throw error;
-
-  data.forEach(function(d) {
-    d.GPStime = new Date(315961183000.0 + d.GPStime * 1000);;
-    d.peak_frequency = +d.peak_frequency;
-    d.snr = +d.snr
-    d.score = +d.score
+  $('#container').imagesLoaded()
+  .always( function( instance ) {
+    console.log('all images loaded');
+  })
+  .done( function( instance ) {
+    console.log('all images successfully loaded');
+  })
+  .fail( function() {
+    console.log('all images loaded, at least one is broken');
+  })
+  .progress( function( instance, image ) {
+    var result = image.isLoaded ? 'loaded' : 'broken';
+    console.log( 'image is ' + result + ' for ' + image.img.src );
   });
-
-  xScale.domain(d3.extent(data, function(d) { return d.GPStime; })).nice();
-  yScale.domain(d3.extent(data, function(d) { return d.peak_frequency; })).nice();
-  yScale2.domain(d3.extent(data, function(d) { return d.snr; })).nice();
-
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("x", width)
-      .attr("y", -6)
-      .style("text-anchor", "end")
-      .text("Date");
-
-  svg2.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("x", width)
-      .attr("y", -6)
-      .style("text-anchor", "end")
-      .text("Date");
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Peak Frequency")
-
-  svg2.append("g")
-      .attr("class", "y axis")
-      //.attr("transform", "translate(0 ," + height + ")")
-      .call(yAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("SNR");
-
-  svg.selectAll(".dot")
-      .data(data)
-    .enter().append("circle")
-      .attr("class", "dot")
-      .attr("r", 3.5)
-      .attr("cx", function(d) { return xScale(d.GPStime); })
-      .attr("cy", function(d) { return yScale(d.peak_frequency); })
-      .style("fill", function(d) { return color(d.Label); })
-      .style("opacity", function(d) { return d.score; })
-      .on("mouseover", function(d) {
-          tooltip.transition()
-              .duration(200)
-              .style("opacity", .9);
-          tooltip.html('ID: ' + d.ID +'<br/>'+ 'GPStime: ' + d.GPStime +'<br/>'+ 'Class: ' + d.Label +'<br/>'+ 'SNR: '+ d.snr +'<br/>'+'peak_freq: '+ d.peak_frequency +' Hz' +'<br/>'+ 'ML confidence: ' + d.score)
-              .style("left", (d3.event.pageX + 5) + "px")
-              .style("top", margin.top + "px");
-          })
-      .on('click', function(d) {
-          tooltip.style('visibility', 'visible')
-              .html('<img src=' + d.linkInd +" width='900px' height='300px' />")
-              .style("left", 0 + "px")
-              .style("top", margin.top +  "px");
-          }) 
-
-  svg2.selectAll(".dot")
-      .data(data)
-    .enter().append("circle")
-      .attr("class", "dot")
-      .attr("r", 3.5)
-      .attr("cx", function(d) { return xScale(d.GPStime); })
-      .attr("cy", function(d) { return yScale2(d.snr); })
-      .style("fill", function(d) { return color(d.Label); })
-      .style("opacity", function(d) { return d.score; })
-      .on("mouseover", function(d) {
-          tooltip.transition()
-              .duration(200)
-              .style("opacity", .9);
-          tooltip.html('ID: ' + d.ID +'<br/>'+ 'GPStime: ' + d.GPStime +'<br/>'+ 'Class: ' + d.Label +'<br/>'+ 'SNR: '+ d.snr +'<br/>'+'peak_freq: '+ d.peak_frequency +' Hz' +'<br/>'+ 'ML confidence: ' + d.score)
-              .style("left", (d3.event.pageX + 20) + "px")
-              .style("top", 3 * margin.top + 3* margin.bottom + height +  "px");
-          })
-      .on('click', function(d) {
-          tooltip.style('visibility', 'visible')
-              .html('<img src=' + d.linkInd +" width='900px' height='300px' />")
-              .style("left", 0 + "px")
-              .style("top", 3 * margin.top + 3 * margin.bottom + height +  "px");
-          })
-
-  var legend = svg.selectAll(".legend")
-      .data(color.domain())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-
-  legend.append("rect")
-      .attr("x", width - 18)
-      .attr("width", 18)
-      .attr("height", 18)
-      .style("fill", color);
-
-  legend.append("text")
-      .attr("x", width - 24)
-      .attr("y", 9)
-      .attr("dy", ".35em")
-      .style("text-anchor", "end")
-      .text(function(d) { return d; });
-
-  {{ ExtraHTML }}
-
-});
-
     </script>
-    {{ ExtraHTML2 }}
 
-    <p><a href="{{ glitchType }}_metadata.html" > {{ glitchType }} metadata </a></p>
-    <p><a href="{{ glitchType }}_metadata.csv" > {{ glitchType }} metadata exports </a></p>
-
-    <div class="grid">
-    <div class="grid-sizer"></div>
-          {% for path in imagePath %}
-            <div class="grid-item {{ Pipeline[path] }}"><img src="{{ path }}" title="{{ title[path] }}"/></div>
-            {% endfor %}
+<div class="container">
+  <h2>Classification By Confidence</h2>
+  <p>Broken into 10 confidence precentiles. Clickdown shows omega scan</p>
+  <div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#high">High (100-90)</a>
+        </h4>
+      </div>
+      <div id="high" class="panel-collapse collapse">
+        <div class="panel-body">
+          <div class="grid">
+            <div class="grid-sizer"></div>
+              {% for path in imagePath %}
+                {%if title[path] > 0.9%}
+                <div class="grid-item {{ Pipeline[path] }}"><img src="{{ path }}" title="{{ title[path] }}"/></div>
+                {% endif %}
+              {% endfor %}
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#Medium">Medium (90-80)</a>
+        </h4>
+      </div>
+      <div id="Medium" class="panel-collapse collapse">
+        <div class="panel-body">
+          <div class="grid">
+            <div class="grid-sizer"></div>
+              {% for path in imagePath %}
+                {%if (title[path] < 0.9) and (title[path] > 0.8)%}
+                <div class="grid-item {{ Pipeline[path] }}"><img src="{{ path }}" title="{{ title[path] }}"/></div>
+                {% endif %}
+              {% endfor %}
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#Low">Low (80-0)</a>
+        </h4>
+      </div>
+      <div id="Low" class="panel-collapse collapse">
+        <div class="panel-body">
+          <div class="grid">
+            <div class="grid-sizer"></div>
+              {% for path in imagePath %}
+                {%if (title[path] < 0.8)%}
+                <div class="grid-item {{ Pipeline[path] }}"><img src="{{ path }}" title="{{ title[path] }}"/></div>
+                {% endif %}
+              {% endfor %}
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
+
 </body>
 </html>
